# Rocket-Logging

./: .env  Cargo.toml  ReadMe.md  log.app
src/: main.rs
src/controller/: student_controller.rs
src/database/: student_mdb.rs
src/fairing/: fairing.rs
src/models/: student_model.rs
src/routes/: student_routes.rs
