[package]
name = "rust_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket={version = "0.5.0-rc.2",features=["json"]}
dotenv="0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"


[dependencies.mongodb]
version="2.2.0"
default-features=false
features=["sync"]
